fixed white space

--- a/src/apps/content-editor/src/app/components/Nav/ContentNav.less
+++ b/src/apps/content-editor/src/app/components/Nav/ContentNav.less
@@ -30,7 +30,7 @@
   overflow-x: hidden;
   background: transparent;
   padding: 0;
-  width: 20rem;
+  white-space: nowrap;
 
   .NavTitle {
     padding: 8px 16px;
